--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="/src/assets/KLA logo.png"
+      sizes="32x38"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>KLA | Handmade Perfection</title>
   </head>
   <body>
     <div id="root"></div>
