--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <style>
+      .icon {
+        width: 12px;
+        height: 12px;
+        /* background-color: bisque; */
+        mix-blend-mode: multiply;
+        object-fit: contain;
+      }
+      .text {
+        font-weight: bold;
+      }
+    </style>
     <meta charset="UTF-8" />
     <link
       rel="icon"
       type="image/png"
       href="/src/assets/KLA logo.png"
-      sizes="32x38"
+      class="icon"
     />
+    <!-- sizes="10x10" -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>KLA | Handmade Perfection</title>
+    <title class="text-[9px] text">KLA - Handmade Perfection</title>
   </head>
   <body>
     <div id="root"></div>
